# codegen

./: Column.py  GoCodeGenerator.py  README.md  SQLParser.py  Table.py  __init__.py  example_usage.py  pyproject.toml  setup.py
